--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -3,9 +3,9 @@
     <div class="d-flex align-items-center justify-content-between position-relative">
 
       <div class="d-flex align-items-center gap-4">
-        <span class="fw-bold fs-3">ProForge</span>
+        <a href="{% url 'candidates:index' %}" class="fw-bold fs-3 text-decoration-none">ProForge</a>
         <nav class="d-none d-md-flex gap-4">
-          <a href="#" class="text-black text-decoration-none">Vacancies</a>
+          <a href="{% url 'candidates:jobs_list' %}" class="text-black text-decoration-none">Vacancies</a>
           <a href="#" class="text-black text-decoration-none">About Us</a>
         </nav>
       </div>
