--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -11,14 +11,14 @@
       </div>
 
       <div class="position-absolute start-50 top-0 translate-middle-x" style="transform: translateX(-50%) translateY(50%);">
-        <div class="mode-toggle btn-group">
-          <a href="#" class="btn active rounded-0">For Candidates</a>
-          <a href="#" class="btn rounded-0">For Employers</a>
+        <div class="btn-group" role="group">
+          <a href="#" class="btn btn-dark px-4" style="border-top-left-radius: 999px; border-bottom-left-radius: 999px;">For Candidates</a>
+          <a href="#" class="btn btn-outline-dark px-4" style="border-top-right-radius: 999px; border-bottom-right-radius: 999px;">For Employers</a>
         </div>
       </div>
 
       <div>
-        <a href="#" class="btn btn-dark rounded-0 px-4">Login</a>
+        <a href="#" class="btn btn-dark px-4" style="border-radius: 999px;">Login</a>
       </div>
 
     </div>
@@ -28,8 +28,10 @@
 
   <div class="container-fluid d-flex justify-content-center mt-5 px-4" style="max-width: 800px;">
     <form class="input-group input-group-lg w-100">
-      <input type="text" class="form-control border border-dark rounded-0" placeholder="Search for jobs...">
-      <button class="btn btn-dark rounded-0 px-4" type="submit">Search</button>
+      <input type="text" class="form-control border border-dark" placeholder="Search for jobs..."
+             style="border-top-left-radius: 999px; border-bottom-left-radius: 999px;">
+      <button class="btn btn-dark px-4" type="submit"
+              style="border-top-right-radius: 999px; border-bottom-right-radius: 999px;">Search</button>
     </form>
   </div>
 </header>
