Add about us page

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -6,7 +6,7 @@
         <a href="{% url 'candidates:index' %}" class="fw-bold fs-3 text-decoration-none">ProForge</a>
         <nav class="d-none d-md-flex gap-4">
           <a href="{% url 'candidates:jobs_list' %}" class="text-black text-decoration-none">Vacancies</a>
-          <a href="#" class="text-black text-decoration-none">About Us</a>
+          <a href="{% url 'candidates:about' %}" class="text-black text-decoration-none">About Us</a>
         </nav>
       </div>
 
