--- a/templates/candidates/vacancies_detail.html
+++ b/templates/candidates/vacancies_detail.html
@@ -42,10 +42,27 @@
         {% endif %}
 
         <div class="position-absolute bottom-0 end-0 mb-4 me-4 d-flex gap-3">
-          <a href="#" class="btn btn-outline-danger rounded-pill d-flex align-items-center gap-2">
-            <i class="bi bi-heart"></i> Save
-          </a>
-          <a href="#" class="btn btn-dark rounded-pill px-4 py-2">Apply Now</a>
+          <form method="POST" action="{% url 'candidates:toggle_save_vacancy' vacancy.id %}">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-outline-danger rounded-pill d-flex align-items-center gap-2">
+              <i class="bi bi-heart{% if vacancy in user.saved_vacancies.all %}-fill{% endif %}"></i>
+              {% if vacancy in user.saved_vacancies.all %}
+                Remove
+              {% else %}
+                Save
+              {% endif %}
+            </button>
+          </form>
+          <form method="POST" action="{% url 'candidates:apply' vacancy.id %}">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-dark rounded-pill px-4 py-2 d-flex align-items-center gap-2">
+              {% if vacancy in user.vacancies.all %}
+                Unapply
+              {% else %}
+                Apply Now
+              {% endif %}
+            </button>
+          </form>
         </div>
 
       </div>
