--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,7 +9,7 @@
 html, body {
     height: 100%;
     width: 100%;
-    font-family: system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.5;
     background-color: #fff;
     color: #000;
