--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,24 +1,16 @@
 <header class="bg-white border-bottom pt-3 pb-3 shadow-sm position-relative">
-  <div class="container-fluid px-4" style="max-width: 100%;">
+  <div class="container px-4">
     <div class="d-flex align-items-center justify-content-between position-relative">
 
       <div class="d-flex align-items-center gap-4">
-        <a href="{% url 'candidates:index' %}" class="fw-bold fs-3 text-decoration-none">ProForge</a>
         <nav class="d-none d-md-flex gap-4">
           <a href="{% url 'candidates:jobs_list' %}" class="text-black text-decoration-none">Vacancies</a>
           <a href="{% url 'candidates:about' %}" class="text-black text-decoration-none">About Us</a>
         </nav>
       </div>
 
-      <div class="position-absolute start-50 top-0 translate-middle-x"
-           style="transform: translateX(-50%) translateY(50%);">
-        <div class="btn-group" role="group">
-          <a href="#" class="btn btn-dark px-4"
-             style="border-top-left-radius: 999px; border-bottom-left-radius: 999px;">For Candidates</a>
-          <a href="#" class="btn btn-outline-dark px-4"
-             style="border-top-right-radius: 999px; border-bottom-right-radius: 999px;">For Employers</a>
-        </div>
-      </div>
+      <a href="{% url 'candidates:index' %}" class="fw-bold fs-3 text-decoration-none position-absolute start-50 top-0 translate-middle-x"
+         style="transform: translateX(-50%) translateY(50%);">ProForge</a>
 
       <div class="d-flex gap-3">
         {% if user.is_authenticated %}
@@ -37,7 +29,7 @@
 
   <hr>
 
-  <div class="container-fluid d-flex justify-content-center mt-5 px-4" style="max-width: 800px;">
+  <div class="container d-flex justify-content-center mt-5 px-4" style="max-width: 800px;">
     <form action="{% url 'candidates:jobs_list' %}" method="get" class="input-group input-group-lg w-100">
       <input type="text" name="text" class="form-control border border-dark" placeholder="Search for jobs..."
              style="border-top-left-radius: 999px; border-bottom-left-radius: 999px;" value="{{ search_query }}">
@@ -45,6 +37,5 @@
               style="border-top-right-radius: 999px; border-bottom-right-radius: 999px;">Search
       </button>
     </form>
-
   </div>
 </header>
