--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/ckeditor_custom.css' %}">
 </head>
 
 <body class="bg-white">
@@ -30,6 +31,7 @@
     {% include "includes/footer.html" %}
   {% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" ...></script>
+  <script src="{% static 'js/ckeditor_custom.js' %}"></script>
 </div>
 </body>
 
