--- a/templates/employers/vacancies_manage.html
+++ b/templates/employers/vacancies_manage.html
@@ -12,7 +12,7 @@
             <div>
               <a href="#" class="btn btn-sm btn-primary">Moderate</a>
               <a href="#" class="btn btn-sm btn-warning">Edit</a>
-              <a href="#" class="btn btn-sm btn-danger">Delete</a>
+              <a href="{% url 'employers:vacancies_delete' vacancy.pk %}" class="btn btn-sm btn-danger">Delete</a>
             </div>
           </li>
         {% endfor %}
