Implement update vacancies

--- a/templates/employers/vacancies_manage.html
+++ b/templates/employers/vacancies_manage.html
@@ -11,7 +11,7 @@
             <strong>{{ vacancy.title }}<span class="text-muted"> | {{ vacancy.company.name }}</span></strong>
             <div>
               <a href="#" class="btn btn-sm btn-primary">Moderate</a>
-              <a href="#" class="btn btn-sm btn-warning">Edit</a>
+              <a href="{% url 'employers:vacancies_update' vacancy.pk %}" class="btn btn-sm btn-warning">Edit</a>
               <a href="{% url 'employers:vacancies_delete' vacancy.pk %}" class="btn btn-sm btn-danger">Delete</a>
             </div>
           </li>
