--- a/templates/employers/companies_delete.html
+++ b/templates/employers/companies_delete.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         <button type="submit" class="btn btn-danger w-100 mt-3" style="font-weight: bold;">Delete</button>
       </form>
-      <a href="{% url 'employers:manage_companies' %}" class="btn btn-secondary w-100 mt-3">Cancel</a>
+      <a href="{% url 'employers:companies_manage' %}" class="btn btn-secondary w-100 mt-3">Cancel</a>
     </div>
   </div>
 {% endblock %}
