--- a/templates/employers/vacancies_detail.html
+++ b/templates/employers/vacancies_detail.html
@@ -18,7 +18,7 @@
         {% endif %}
 
         <div class="mb-2 text-muted">
-          <a href="{% url 'employers:company_detail' vacancy.company.pk %}"><strong>{{ vacancy.company.name }}</strong></a>
+          <a href="{% url 'employers:companies_detail' vacancy.company.pk %}"><strong>{{ vacancy.company.name }}</strong></a>
           {% if vacancy.location %}
             <span> · {{ vacancy.location }}</span>
           {% endif %}
