add black lines to all templates

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+  <title>Login</title>
+{% endblock %}
+
 {% block content %}
   <div class="container d-flex justify-content-center align-items-center flex-column">
     <div class="login-box">
