--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block title %}
+  <title>Signup</title>
+{% endblock %}
+
 {% block content %}
   <div class="container d-flex justify-content-center align-items-center flex-column">
     <div class="signup-box">
