--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  {% block title %}<title>ProForge | Overall info</title>{% endblock %}
+  {% block title %}<title>ProForge</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
