--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -9,7 +9,8 @@
         </nav>
       </div>
 
-      <a href="{% url 'candidates:index' %}" class="fw-bold fs-3 text-decoration-none position-absolute start-50 top-0 translate-middle-x"
+      <a href="{% url 'candidates:index' %}"
+         class="fw-bold fs-3 text-decoration-none position-absolute start-50 top-0 translate-middle-x"
          style="transform: translateX(-50%) translateY(50%);">ProForge</a>
 
       <div class="d-flex gap-3">
